# agent-harness

./: .gitignore  AGENTS.md  LICENSE  README.md  SESSION_HANDOFF.md  example_runs.md  pyproject.toml
agent_harness/: __init__.py  __main__.py  budget.py  cli.py  config.py  context.py  display.py  hooks.py  log.py  memory.py  network.py  permissions.py  routing.py  scaffold.py  session.py  skills.py  tools.py  trace.py  types.py
agent_harness/loops/: __init__.py  common.py  debate.py  eval_optimize.py  plan_execute.py  ralph.py  react.py  reflection.py  rewoo.py
agent_harness/providers/: __init__.py  anthropic.py  openai_provider.py  retry.py
agents/analyst/: config.yaml  instructions.md
agents/code-reviewer/: config.yaml  instructions.md
agents/column-matcher/: config.yaml  instructions.md
agents/column-matcher-reflective/: config.yaml  instructions.md
agents/csv-analyser/: config.yaml  instructions.md
agents/file-organiser/: config.yaml  instructions.md
agents/hello/: config.yaml
agents/hello-local/: config.yaml  instructions.md
agents/hello-openai/: config.yaml
agents/local-coder/: config.yaml  instructions.md
agents/orchestrator/: config.yaml  (+1 more)
data/: context.md  expected_matches.json
docs/: Progress_Tracker.md  agent-builders-guide.md  agentic-design-patterns.md  architecture.md  codex_code_review.md  experiment_results.csv  matcher_experiments.md  prd.md  roadmap.md  spec.md  streaming-plan.md  test_summary.md
scripts/: run_experiment.py  score_run.py
tools/: file_search.py  profile_data.py  value_overlap.py  word_count.py
(+71 files in other folders)
